# DiscordBot

./: pyproject.toml
Src/: main.py
